<?xml version="1.0" encoding="utf-8"?>

<!--
Programmer: Moses Troyer
Class ID: mtroyer4551
Lab 4
CIS 4700: Mobile Commerce Development
Spring 2016
Due date: 4/10/16
Date completed: 4/13/16
*************************************
* Main screen for the app. Has two
* input fields for looking at a users
* timeline and for searching them on google
*************************************
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stalkPrompt"
        android:id="@+id/textViewStalkPrompt"
        android:layout_gravity="center_horizontal"
        android:textColor="#000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUser"
        android:layout_gravity="center_horizontal"
        android:hint="@string/editTextUserHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stalk"
        android:id="@+id/buttonStalk"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchPrompt"
        android:id="@+id/textViewSearchPrompt"
        android:layout_gravity="center_horizontal"
        android:textColor="#000"
        android:singleLine="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUserSearch"
        android:layout_gravity="center_horizontal"
        android:hint="@string/editTextUserHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/buttonSearch"
        android:layout_gravity="center_horizontal" />
</LinearLayout>